--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -9,133 +9,155 @@
     android:background="@color/GrayBlue">
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/bgLogin"
         android:layout_width="471dp"
         android:layout_height="343dp"
+        android:contentDescription="@string/LoginCD"
         app:srcCompat="@drawable/loginbg"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-30dp"
         tools:layout_editor_absoluteY="-25dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clCreds"
+        android:id="@+id/clLgnLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@id/clLgnSub"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/userInput"
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="195dp"
+            android:layout_height="159dp"
+            android:layout_marginBottom="12dp"
+            android:contentDescription="@string/logo"
+            app:layout_constraintBottom_toTopOf="@id/txtTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/loginlogo" />
+
+        <TextView
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:text="@string/txtTitle"
+            android:textColor="@color/Juniper"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clLgnSub"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clLgnLogo">
+
+        <TextView
+            android:id="@+id/txtLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:letterSpacing="0.2"
+            android:text="@string/txtLogin"
+            android:textColor="@color/DarkBlue"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/inpUser"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/inpUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
             android:background="@drawable/login_creds"
             android:ems="16"
-            android:hint="Username"
+            android:hint="@string/inpUser"
             android:inputType="textEmailAddress"
             android:padding="15dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="16sp"
-            tools:layout_editor_absoluteX="56dp"
-            tools:layout_editor_absoluteY="436dp"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtLogin"
+            tools:ignore="Autofill" />
 
         <EditText
-            android:id="@+id/passInput"
+            android:id="@+id/inpPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:background="@drawable/login_creds"
             android:ems="16"
-            android:hint="Password"
+            android:hint="@string/inpPass"
             android:inputType="textPassword"
             android:padding="15dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="16sp"
-            tools:layout_editor_absoluteX="56dp"
-            tools:layout_editor_absoluteY="508dp"
-            tools:ignore="MissingConstraints"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inpUser"
+            tools:ignore="Autofill" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnLoginFP"
             android:layout_width="300dp"
             android:layout_height="50dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/btn_rounded_corner"
             android:backgroundTint="@color/DarkBlue"
             android:letterSpacing="0.3"
-            android:text="LOG IN"
+            android:text="@string/btnLoginFP"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="609dp"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintTop_toBottomOf="@+id/inpPass" />
 
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clLgnLogo"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/descSignUp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            tools:layout_editor_absoluteY="3dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="72dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/descSignUp"
+            android:textColor="@color/DarkBlue"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/btnLoginFP" />
 
-            <ImageView
-                android:id="@+id/loginLogo"
-                android:layout_width="195dp"
-                android:layout_height="159dp"
-                app:srcCompat="@drawable/loginlogo"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="89dp"
-                tools:layout_editor_absoluteY="16dp" />
-
-            <TextView
-                android:id="@+id/txtLogTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:fontFamily="serif"
-                android:text="@string/txtTitle"
-                android:textColor="@color/Juniper"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.501"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/loginLogo" />
-
-            <TextView
-                android:id="@+id/txtLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:letterSpacing="0.2"
-                android:text="Login"
-                android:textColor="@color/DarkBlue"
-                android:textSize="35sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="311dp" />
-
-            <TextView
-                android:id="@+id/subLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sign in to continue."
-                android:textColor="@color/DarkBlue"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="358dp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btnSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="68dp"
+            android:backgroundTint="@color/Juniper"
+            android:text="@string/txtSignUp"
+            android:textColor="@color/Light_Blue"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnLoginFP" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
