--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,37 @@
     tools:context=".MainActivity"
     android:background="@color/GrayBlue">
 
+    <ImageView
+        android:id="@+id/bgSignUp"
+        android:layout_width="471dp"
+        android:layout_height="343dp"
+        android:contentDescription="@string/LoginCD"
+        app:srcCompat="@drawable/loginbg"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-30dp"
+        tools:layout_editor_absoluteY="-25dp" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clTitle"
+        android:id="@+id/clLgnLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@id/clLogReg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="195dp"
+            android:layout_height="159dp"
+            android:layout_marginBottom="12dp"
+            android:contentDescription="@string/logo"
+            app:layout_constraintBottom_toTopOf="@id/txtTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/loginlogo" />
 
         <TextView
             android:id="@+id/txtTitle"
@@ -24,47 +46,44 @@
             android:layout_height="wrap_content"
             android:fontFamily="serif"
             android:text="@string/txtTitle"
-            android:textColor="@color/white"
-            android:textSize="35sp"
+            android:textColor="@color/Juniper"
+            android:textSize="25sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/txtSubTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
         <TextView
             android:id="@+id/txtSubTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
             android:text="@string/txtSubTitle"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/Juniper"
+            android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/txtTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clLogReg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/clTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bgSignUp">
+
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="200dp"
             android:layout_height="55dp"
+            android:layout_margin="10dp"
             android:background="@drawable/btn_rounded_corner"
             android:backgroundTint="@color/Juniper"
             android:shadowColor="@color/black"
             android:shadowRadius="2"
             android:text="@string/btnLogin"
             android:textColor="@color/white"
-            android:layout_margin="10dp"
             app:layout_constraintBottom_toTopOf="@id/btnRegister"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,17 +93,17 @@
             android:id="@+id/btnRegister"
             android:layout_width="200dp"
             android:layout_height="55dp"
+            android:layout_margin="10dp"
             android:background="@drawable/btn_rounded_corner"
             android:backgroundTint="@color/Juniper"
             android:shadowColor="@color/black"
             android:shadowRadius="2"
             android:text="@string/btnRegister"
             android:textColor="@color/white"
-            android:layout_margin="10dp"
-            app:layout_constraintTop_toBottomOf="@id/btnLogin"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
