--- a/app/src/main/res/layout/activity_qr_scanner.xml
+++ b/app/src/main/res/layout/activity_qr_scanner.xml
@@ -8,15 +8,40 @@
     tools:context=".QrScanner"
     android:background="@color/black">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/navBar"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner"
-        android:layout_margin="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="start"
-        tools:ignore="MissingConstraints" >
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="match_parent">
+
+
+        <com.budiyev.android.codescanner.CodeScannerView
+            android:id="@+id/scanner_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:autoFocusButtonColor="@android:color/white"
+            app:autoFocusButtonVisible="true"
+            app:flashButtonColor="@android:color/white"
+            app:flashButtonVisible="true"
+            app:frameColor="@android:color/white"
+            app:frameCornersSize="50dp"
+            app:frameCornersRadius="0dp"
+            app:frameAspectRatioWidth="1"
+            app:frameAspectRatioHeight="1"
+            app:frameSize="0.75"
+            app:frameThickness="2dp"
+            app:frameVerticalBias="0.5"
+            app:maskColor="#77000000"/>
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/navBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corner"
+            android:layout_margin="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="start"
+            tools:ignore="MissingConstraints" >
+        </androidx.appcompat.widget.Toolbar>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
