--- a/app/src/main/res/layout/activity_museum_finder.xml
+++ b/app/src/main/res/layout/activity_museum_finder.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".MuseumFinder"
     android:background="@color/GrayBlue">
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/navBar"
