--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="Light_Blue">#C4DFE3</color>
     <color name="Blood">#710C04</color>
     <color name="DarkBlue">#4a676b</color>
+    <color name="Grey">#D9D9D9</color>
+
 
 
 
