--- a/app/src/main/res/layout/activity_qr_code_result.xml
+++ b/app/src/main/res/layout/activity_qr_code_result.xml
@@ -16,125 +16,150 @@
         android:layout_margin="5dp"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="start"
-        tools:ignore="MissingConstraints" >
+        tools:ignore="MissingConstraints">
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
-        android:id="@+id/monalisascream"
-        android:layout_width="287dp"
-        android:layout_height="230dp"
-        android:layout_marginTop="80dp"
-        android:contentDescription="@string/resDescr"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clArtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/navBar"
-        app:srcCompat="@drawable/monalisa_scream" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ScrollView
-        android:id="@+id/scrollHistory"
-        android:layout_width="287dp"
-        android:layout_height="158dp"
-        android:layout_marginBottom="92dp"
-        android:fillViewport="true"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
+        <ImageView
+            android:id="@+id/monalisascream"
+            android:layout_width="356dp"
+            android:layout_height="289dp"
+            android:layout_marginTop="80dp"
+            android:contentDescription="@string/resDescr"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/clArtTitle"
+            app:srcCompat="@drawable/monalisa_scream" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:background="@color/Light_Blue"
-            android:text="@string/txtScroll"
+            android:id="@+id/resultTitle"
+            android:layout_width="290dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="12dp"
+            android:text="@string/resTitle"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="12sp">
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/monalisascream" />
 
-        </TextView>
+        <TextView
+            android:id="@+id/aName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/aName"
+            android:textAlignment="center"
+            android:textColor="@color/Blood"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/resultTitle" />
 
-    </ScrollView>
+        <TextView
+            android:id="@+id/aNameSub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/aNameSub"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/aName" />
 
-    <TextView
-        android:id="@+id/resultTitle"
-        android:layout_width="290dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/resTitle"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/monalisascream" />
+        <TextView
+            android:id="@+id/mUsed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/mUsed"
+            android:textAlignment="center"
+            android:textColor="@color/Blood"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/aNameSub" />
 
-    <TextView
-        android:id="@+id/aNameSub"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/mUsedSub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/mUsedSub"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mUsed" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clArtDesc"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/aNameSub"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aName" />
-
-    <TextView
-        android:id="@+id/aName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/aName"
-        android:textAlignment="center"
-        android:textColor="@color/Blood"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultTitle" />
-
-    <TextView
-        android:id="@+id/mUsed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/mUsed"
-        android:textAlignment="center"
-        android:textColor="@color/Blood"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aNameSub" />
-
-    <TextView
-        android:id="@+id/mUsedSub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/mUsedSub"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mUsed" />
-
-    <Button
-        android:id="@+id/btnPuzzle"
-        android:layout_width="165dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/btn_rounded_corner"
-        android:text="@string/btnPuzzle"
-        android:textColor="@color/black"
+        android:layout_marginBottom="40dp"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ScrollView
+            android:id="@+id/scrollHistory"
+            android:layout_width="300dp"
+            android:layout_height="158dp"
+            android:layout_marginBottom="92dp"
+            android:fillViewport="true"
+            android:padding="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/Light_Blue"
+                android:padding="16dp"
+                android:text="@string/txtScroll"
+                android:textColor="@color/black"
+                android:textSize="12sp">
+
+            </TextView>
+
+        </ScrollView>
+
+        <Button
+            android:id="@+id/btnPuzzle"
+            android:layout_width="165dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/btn_rounded_corner"
+            android:text="@string/btnPuzzle"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/scrollHistory" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
